9コマ目　4-12完了

--- a/project/bookproject/book/templates/book/book_list.html
+++ b/project/bookproject/book/templates/book/book_list.html
@@ -8,7 +8,9 @@
     <h5 class="card-header">{{ item.title }}</h5>
     <div class="card-body">
       <p class="card-text">{{ item.text }}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="{% url 'detail-book' item.pk %}" class="btn btn-primary">詳細へ</a>
+      <a href="{% url 'update-book' item.pk %}" class="btn btn-primary">編集する</a>
+      <a href="{% url 'delete-book' item.pk %}" class="btn btn-primary">削除する</a>
       <h6 class="card-title">{{ item.category }}</h6>
     </div>
   </div>
