9コマ目　4-13完了

--- a/project/bookproject/templates/base.html
+++ b/project/bookproject/templates/base.html
@@ -11,6 +11,15 @@
     <title>{% block title %}{% endblock title %}| 本棚アプリ</title>
   </head>
   <body>
-    {% block content %}{% endblock content %}
+    <nav class="navbar navbar-dark bg-success sticky-top">
+      <div class="navbar-nav d-flex flex-row">
+        <a class="nav-link mx-3" href="{% url 'list-book' %}">書籍一覧</a>
+        <a class="nav-link mx-3" href="{% url 'create-book' %}">書籍追加</a>
+      </div>
+    </nav>
+    <div class='p-4'>
+        <h1>{% block h1 %}{% endblock %}</h1>
+        {% block content %}{% endblock content %}
+    </div>
   </body>
 </html>
