--- a/project/bookproject/book/templates/book/book_detail.html
+++ b/project/bookproject/book/templates/book/book_detail.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
-
-{% block title %}書籍詳細{% endblock %}
-
+{% block title %}{{ object.title }}{% endblock %}
+{% block h1 %}書籍詳細{% endblock %}
 {% block content %}
-  <div class="card">
-    <h5 class="card-header">{{ object.title }}</h5>
-    <div class="card-body">
-      <p class="card-text">{{ object.text }}</p>
-      <a href="#" class="btn btn-primary">ボタン</a>
-      <h6 class="card-title">{{ object.category }}</h6>
-    </div>
+  <div class="p-4 m-4 bg-light border border-success rounded">
+    <h2 class="text-success">{{ object.title }}</h2>
+    <p>{{ object.text }}</p>
+    <a href="{% url 'list-book' %}" class="btn btn-primary">一覧へ</a>
+    <a href="{% url 'update-book' object.pk %}" class="btn btn-success">編集する</a>
+    <a href="{% url 'delete-book' object.pk %}" class="btn btn-danger">削除する</a>
+    <h6 class="card-title">{{ object.category }}</h6>
   </div>
 {% endblock content %}
