--- a/project/bookproject/templates/base.html
+++ b/project/bookproject/templates/base.html
@@ -16,6 +16,13 @@
         <a class="nav-link mx-3" href="{% url 'list-book' %}">書籍一覧</a>
         <a class="nav-link mx-3" href="{% url 'create-book' %}">書籍追加</a>
       </div>
+      <div class="navbar-nav d-flex flex-row">
+        {% if request.user.is_authenticated %}
+          <a class="nav-link mx-3" href="{% url 'logout' %}">ログアウト</a>
+        {% else %}
+          <a class="nav-link mx-3" href="{% url 'login' %}">ログイン</a>
+        {% endif %}
+      </div>
     </nav>
     <div class='p-4'>
         <h1>{% block h1 %}{% endblock %}</h1>
