--- a/project/bookproject/templates/base.html
+++ b/project/bookproject/templates/base.html
@@ -18,9 +18,10 @@
       </div>
       <div class="navbar-nav d-flex flex-row">
         {% if request.user.is_authenticated %}
-          <a class="nav-link mx-3" href="{% url 'logout' %}">ログアウト</a>
+          <a class="nav-link mx-3" href="{% url 'accounts:logout' %}">ログアウト</a>
         {% else %}
-          <a class="nav-link mx-3" href="{% url 'login' %}">ログイン</a>
+          <a class="nav-link mx-3" href="{% url 'accounts:login' %}">ログイン</a>
+          <a class="nav-link mx-3" href="{% url 'accounts:signup' %}">会員登録</a>
         {% endif %}
       </div>
     </nav>
