--- a/project/bookproject/book/templates/book/book_detail.html
+++ b/project/bookproject/book/templates/book/book_detail.html
@@ -5,6 +5,7 @@
   <div class="p-4 m-4 bg-light border border-success rounded">
     <h2 class="text-success">{{ object.title }}</h2>
     <p>{{ object.text }}</p>
+    <a href="{% url 'review' object.pk %}" class="btn btn-primary">レビューする</a>
     <a href="{% url 'list-book' %}" class="btn btn-primary">一覧へ</a>
     <a href="{% url 'update-book' object.pk %}" class="btn btn-success">編集する</a>
     <a href="{% url 'delete-book' object.pk %}" class="btn btn-danger">削除する</a>
