14コマ目完了

--- a/project/bookproject/book/templates/book/book_create.html
+++ b/project/bookproject/book/templates/book/book_create.html
@@ -3,7 +3,7 @@
 {% block title %}書籍作成{% endblock %}
 
 {% block content %}
-  <form method='POST'>{% csrf_token %}
+  <form method='post' enctype="multipart/form-data" class="p-4 m-4 bg-light border border-success rounded form-group">{% csrf_token %}
     {{form.as_p}}
     <input type='submit' value='作成する'>
   </form>
