--- a/project/bookproject/book/templates/book/index.html
+++ b/project/bookproject/book/templates/book/index.html
@@ -7,6 +7,7 @@
   {% for item in object_list %}
   <div class="p4 m-4 bg-light border border-success rounded">
     <h2 class="text-success">{{ item.title }}</h2>
+    <img src="{{ item.thumbnail.url }}" class="img-thumbnail" />
     <h6>カテゴリ：{{ item.category }}</h6>
     <div class="mt-3">
       <a href="{% url 'detail-book' item.pk %}">詳細へ</a>
