--- a/project/bookproject/templates/base.html
+++ b/project/bookproject/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>{% block title %}{% endblock title %}| 本棚アプリ</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'book/css/style.css' %}">
   </head>
   <body>
     <nav class="navbar navbar-dark bg-success sticky-top">
