--- a/project/bookproject/book/templates/book/book_detail.html
+++ b/project/bookproject/book/templates/book/book_detail.html
@@ -5,6 +5,18 @@
   <div class="p-4 m-4 bg-light border border-success rounded">
     <h2 class="text-success">{{ object.title }}</h2>
     <p>{{ object.text }}</p>
+    <div class="border p-4 mb-2">
+      {% for review in object.review_set.all %}
+      <div>
+        <h3 class="h4">{{ review.title }}</h3>
+        <div class="px-2">
+          <span>(投稿ユーザー： {{ review.user.username }})</span>
+          <h6>評価：{{ review.rate }}点</h6>
+          <p>{{ review.text }}</p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
     <a href="{% url 'review' object.pk %}" class="btn btn-primary">レビューする</a>
     <a href="{% url 'list-book' %}" class="btn btn-primary">一覧へ</a>
     <a href="{% url 'update-book' object.pk %}" class="btn btn-success">編集する</a>
